# Centralassociation

./: .gitignore  LICENSE  README.md  assos_links.yaml  build.py  check_assets  check_assets.py  links.yaml  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: publish.yml  test.yml
src/: index.html  index.html.j2  index2.html
src/assets/: stylesheet.css
