[tool.poetry]
name = "centralassociation"
version = "0.1.0"
description = ""
authors = ["Paul Saubusse <paul.saubusse@etu.ec-lyon.fr>"]
homepage = "https://centralassociation.eclair.ec-lyon.fr/"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
