[tool.poetry]
name = "centralassociation"
version = "0.1.0"
description = ""
authors = ["Paul Saubusse <paul.saubusse@etu.ec-lyon.fr>"]
homepage = "https://assos.myecl.fr/"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.5"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
